feat: implement Pixel Perfect requirements

--- a/_src/index.html
+++ b/_src/index.html
@@ -224,7 +224,7 @@
                 type="range"
                 min="0"
                 max="100"
-                value="45"
+                value="44"
                 step="1"
               />
 
@@ -234,7 +234,14 @@
               >
                 <span class="visually-hidden">Mute</span>
               </button>
-              <input type="range" class="player__range player__range--volume" />
+              <input
+                type="range"
+                class="player__range player__range--volume"
+                min="0"
+                max="100"
+                value="43"
+                step="1"
+              />
 
               <button class="player__button player__button--full" type="button">
                 <span class="visually-hidden">Full screen</span>
