fix: correct layout of  ticket section

--- a/_src/index.html
+++ b/_src/index.html
@@ -160,7 +160,7 @@
               <h2 class="section__title">Picture explore</h2>
               <p class="section__text">
                 Las Meninas is a 1656 painting by Diego Velázquez, the leading
-                artist of the Spanish Golden Age.
+                artist&nbspof the Spanish Golden Age.
               </p>
               <p class="section__text">
                 It was cleaned in 1984 to remove a
@@ -276,6 +276,7 @@
                       name="ticket-type"
                       id="permanent-ticket"
                       value="permanent"
+                      checked
                     />
                     <label class="ticket-type__label" for="permanent-ticket"
                       >Permanent exhibition</label
@@ -373,7 +374,7 @@
                   </div>
                 </fieldset>
 
-                <b class="tickets__total">Total € <span>220</span></b>
+                <b class="tickets__total">Total €<span>220</span></b>
                 <button class="tickets__button" type="submit">Buy Now</button>
               </div>
             </form>
