--- a/_src/index.html
+++ b/_src/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body class="page__body">
+    @@include('_svg-sprite.html')
     <header class="header">
       <div class="container">
         <nav class="header__navigation navigation">
@@ -51,7 +52,12 @@
             <p class="welcome__subtitle section__subtitle">
               From the castle to the museum
             </p>
-            <a class="button" href="#">Discover the Louvre</a>
+            <a
+              class="button"
+              target="_blank"
+              href="https://www.google.com/maps/@48.8618159,2.3366818,3a,75y,81.55h,73.4t/data=!3m7!1e1!3m5!1sAF1QipOVxZQuSy3Bx9T_HpH_7FtBHDTXvI6SF-A10ocT!2e10!3e12!7i5472!8i2736"
+              >Discover the Louvre</a
+            >
           </div>
         </div>
       </section>
@@ -61,7 +67,11 @@
           <h2 class="section__title">Virtual tour</h2>
           <ul class="visiting__list">
             <li class="visiting__item place">
-              <a class="place__link" href="#">
+              <a
+                class="place__link"
+                href="https://www.google.com/maps/@48.8606882,2.3356791,3a,90y,328.36h,87.55t/data=!3m7!1e1!3m5!1sAF1QipMZ9YgnArbwEIbTDANeSQYFu9gNqpW_2Sv8FBvY!2e10!3e12!7i4352!8i1815"
+                target="_blank"
+              >
                 <h3 class="place__title">Royal Palace</h3>
                 <img
                   class="place__image"
@@ -76,7 +86,11 @@
             </li>
 
             <li class="visiting__item place">
-              <a class="place__link" href="#">
+              <a
+                class="place__link"
+                href="https://www.google.com/maps/@48.8563254,2.3352706,3a,75y,90t/data=!3m7!1e1!3m5!1sAF1QipNRj_CwP4coDMYdCHj6qHeBeJpI2VxU5BUsOX4F!2e10!3e12!7i11000!8i5500"
+                target="_blank"
+              >
                 <h3 class="place__title">Denon Wing</h3>
                 <img
                   class="place__image"
@@ -91,7 +105,11 @@
             </li>
 
             <li class="visiting__item place">
-              <a class="place__link" href="#">
+              <a
+                class="place__link"
+                href="https://www.google.com/maps/@48.8601723,2.3395439,3a,88.4y,322.04h,84.25t/data=!3m7!1e1!3m5!1sAF1QipNMZGQuEA-pAUvIG_eP_2f3gWTKZEJ6XLVJ-Pgb!2e10!3e12!7i10240!8i5120"
+                target="_blank"
+              >
                 <h3 class="place__title">Colonnade Perrault</h3>
                 <img
                   class="place__image"
@@ -106,7 +124,11 @@
             </li>
 
             <li class="visiting__item place">
-              <a class="place__link" href="#">
+              <a
+                class="place__link"
+                href="https://www.google.com/maps/@48.860183,2.3356156,3a,90y,177.69h,95.61t/data=!3m7!1e1!3m5!1sAF1QipP7uFZnTITRe-7AEVAgHAfqiCL-03gvBHcYWgF3!2e10!3e12!7i5472!8i2736"
+                target="_blank"
+              >
                 <h3 class="place__title">Greek hall</h3>
                 <img
                   class="place__image"
@@ -121,7 +143,11 @@
             </li>
 
             <li class="visiting__item place">
-              <a class="place__link" href="#">
+              <a
+                class="place__link"
+                href="https://www.google.com/maps/@48.8598788,2.3355157,3a,82.2y,7.53h,94t/data=!3m7!1e1!3m5!1sAF1QipO1wkUUbyzpPjj-OR0mR5etZJT-xl-40XK8rDQ3!2e10!3e12!7i10240!8i5120"
+                target="_blank"
+              >
                 <h3 class="place__title">Mona Lisa</h3>
                 <img
                   class="place__image"
@@ -136,7 +162,11 @@
             </li>
 
             <li class="visiting__item place">
-              <a class="place__link" href="#">
+              <a
+                class="place__link"
+                href="https://www.google.com/maps/@48.8563254,2.3352706,3a,90y,21.26h,79.91t/data=!3m7!1e1!3m5!1sAF1QipPpGAowYatVyk3MMGnZAaQkYm2EUk-Dlca06SS5!2e10!3e12!7i11304!8i5652"
+                target="_blank"
+              >
                 <h3 class="place__title">Night Palace</h3>
                 <img
                   class="place__image"
@@ -455,19 +485,64 @@
 
         <ul class="footer__social social">
           <li class="social__item">
-            <a href="#" class="social__link social__link--youtube"></a>
+            <a
+              href="https://www.youtube.com/user/louvre"
+              target="_blank"
+              class="social__link"
+              aria-label="Youtube"
+            >
+              <svg width="23" height="16">
+                <use xlink:href="#icon-youtube"></use>
+              </svg>
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--instagram"></a>
+            <a
+              href="https://www.instagram.com/museelouvre/"
+              target="_blank"
+              class="social__link"
+              aria-label="Instagram"
+            >
+              <svg width="20" height="20">
+                <use xlink:href="#icon-instagram"></use>
+              </svg>
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--facebook"></a>
+            <a
+              href="https://www.facebook.com/museedulouvre"
+              target="_blank"
+              class="social__link"
+              aria-label="Facebook"
+            >
+              <svg width="13" height="20">
+                <use xlink:href="#icon-facebook"></use>
+              </svg>
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--twitter"></a>
+            <a
+              href="http://twitter.com/museelouvre"
+              target="_blank"
+              class="social__link"
+              aria-label="Twitter"
+            >
+              <svg width="20" height="16">
+                <use xlink:href="#icon-twitter"></use>
+              </svg>
+            </a>
           </li>
           <li class="social__item">
-            <a href="#" class="social__link social__link--pinterest"></a>
+            <a
+              href="https://www.pinterest.fr/museedulouvre/"
+              target="_blank"
+              class="social__link"
+              aria-label="Pinterest"
+            >
+              <svg width="20" height="20">
+                <use xlink:href="#icon-pinterest"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
